ajout des bordures css

--- a/lettre2.html
+++ b/lettre2.html
@@ -7,14 +7,18 @@
 		<style type="text/css">
 			body{
 				margin: 0;
-
 			}
 
 			main{
-				margin: 20px 1.5em;
+				width: 70%;
+				height: 1000px;
+				border:1px solid black;
+				margin: 20px auto 20px;
+				padding: 20px 20px;
 				font-size: 20px;
 				font-family:"Comic Sans MS","Helvetica","sans sérif";
-				text-align: justify; 
+				text-align: justify;
+				box-shadow: 1px 2px 3px 5px; 
 			}
 
 			h2{
@@ -50,7 +54,7 @@
 
 			.sect1{
 				text-align: right;
-				margin-right: 10em;
+				margin-right: 5em;
 				margin-top: 50px;
 
 			}
